# hydra-dvc-practice

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Dockerfile  Makefile  README.md  compose.yml  dvc.yaml  params.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-ci.yaml
conf/: config.yaml
conf/model/: random_forest.yaml
conf/models/: logistic_regression.yaml
conf/paths/: default.yaml
configs/hydra/: default.yaml
src/hydra_dvc_practice/: __init__.py  eval.py  load_data.py  preprocess.py  train.py
